Fixes site name layout issue

--- a/lanews.css
+++ b/lanews.css
@@ -33,13 +33,17 @@ body {
     position: relative;
 }
 .site-info {
-    position: absolute;
-    top: 0;
-    right: 0;
     font-style: italic;
-    text-align: right;
     font-size: .8em;
     color: #aaa
+}
+@media(min-width: 800px) {
+    .site-info {
+        position: absolute;
+        top: 0;
+        right: 0;
+        text-align: right;
+    }
 }
 
 .site-name {
